<resources>
    <string name="app_name">Shilaj(Admin)</string>
    <string name="action_settings">Settings</string>
    <string name="action_example">Example action</string>
    <string-array name="menuoption1">
        <item>Home</item>
    </string-array>
    <string name="Dashboard">DASHBOARD</string>
    <string name="student">STUDENT</string>
    <string name="staff">STAFF</string>
    <string name="account">ACCOUNT</string>
    <string name="transport">TRANSPORT</string>
    <string name="hr">HR</string>
    <string name="other">OTHER</string>
    <string name="student_permission">PERMISSION</string>
    <string name="resultpermission">RESULT PERMISSION</string>
    <string name="attendace">ATTENDANCE</string>
    <string name="student_title">STUDENT</string>
    <string name="allDetails">STUDENT DETAILS</string>
    <string name="standardwiseattendace">Standard Wise Attendance</string>
    <string name="consistent_absent">Consistence Absent Teacher</string>
    <string name="alert_msg">Alert Msg</string>
    <string name="ok">OK</string>
    <string name="attendancesummary">ATTENDANCE SUMMARY</string>
    <string name="internet_error">Internet Connection !</string>
    <string name="internet_connection_error">Admin requires an internet connection.Make sure Wi-Fi or mobile networks are turned on, then try again.</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="blank">Blank Filed Not Allowed</string>
    <string name="false_msg">Record not found</string>
    <string name="true_msg">Send Successfully</string>
    <string name="student_txt"><u>Student</u></string>
    <string name="staff_txt"><u>Staff</u></string>
    <string name="absent">Absent</string>
    <string name="present">Present</string>
    <string name="leave">Leave</string>
    <string name="total">Total</string>
    <string name="onduty">Onduty</string>
    <string name="resultstatus">Result Status</string>
    <string name="profilestatus">Permission Status</string>
    <string name="standardname">Standarname</string>
    <string name="standardstatus">Status</string>
    <string name="employeename">Employee</string>
    <string name="days">Days</string>
    <string name="searchtype">Parents Name</string>
    <string name="index">Index</string>
    <string name="searchparents">Parent Name</string>
    <string name="searchstudent">Student Name</string>
    <string name="student1">Student</string>
    <string name="grno">GRNO</string>
    <string name="grade">Grade</string>
    <string name="pagename">Page Name</string>
    <string name="underpagename">Under Page</string>
    <string name="view"><u>View</u></string>
    <string name="studenttag">Tag</string>
    <string name="firstname">First Name</string>
    <string name="middlename">Middle Name</string>
    <string name="lastname">Last Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="birthplace">Birth Place</string>
    <string name="state">State</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="aadhar">Aadhaar Card No.</string>
    <string name="studenttype">Student Type</string>
    <string name="acedamic">Acedamic Year</string>
    <string name="section">Section</string>
    <string name="lastschool">Last School</string>
    <string name="doa">Date of admission</string>
    <string name="doataken">Admission Taken</string>
    <string name="bloodgroup">Blood Group</string>
    <string name="house">House</string>
    <string name="oldgr">Old GRNO</string>
    <string name="religion">Religion</string>
    <string name="nationality">Nationality</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="registration">Registration Date</string>
    <string name="pickup">Pickup Bus</string>
    <string name="pickuppoint">Pickup Point</string>
    <string name="pickuptime">Pickup Point Time</string>
    <string name="dropbus">Drop Bus</string>
    <string name="droppoint">Drop Point</string>
    <string name="droptime">Drop Point Time</string>
    <string name="phone">Phone No.</string>
    <string name="mobile">Mobile No.</string>
    <string name="email">Email Address</string>
    <string name="qualification">Qualification</string>
    <string name="occupation">Occupation</string>
    <string name="organization">Organization</string>
    <string name="designation">Designation</string>
    <string name="sms">SMS Communication No.</string>
    <string name="city">City</string>
    <string name="zipcode">Zip Code</string>
    <string name="address">Address</string>
    <string name="studentdetail">STUDENT DETAILS</string>
    <string name="transportdetail">Transport Detail</string>
    <string name="fatherdetail">Father Detail</string>
    <string name="motherdetail">Mother Detail</string>
    <string name="communication">Communication Detail</string>
    <string name="viewsummary"><u>View Summar</u>y<u> Details >></u></string>
    <string name="term">Academic Year</string>
    <string name="route">Route</string>
    <string name="teacher">Teacher</string>
    <string name="user">User\'s</string>
    <string name="classTeacher">Class Teacher</string>
    <string name="pick">Pickup Point</string>
    <string name="routename">Route Name</string>
    <string name="pickuppointname">Pickup Point</string>
    <string name="km">KM</string>
    <string name="mobileno">Mobile No.</string>
    <string name="family">Family</string>
    <string name="gradesection">Grade/Section</string>
    <string name="message">Message</string>
    <string name="smsnumber">SMS Number</string>
    <string name="singlesms">SINGLE SMS</string>
    <string name="quickemail">QUICK EMAIL</string>
    <string name="studenttransport">STUDENT TRANSPORT</string>
    <string name="transportcharge">TRANSPORT CHARGES</string>
    <string name="assignsubject">ASSIGN SUBJECT</string>
    <string name="classteacher">CLASS TEACHER</string>
    <string name="menupermission">MENU PERMISSION</string>
    <string name="employeesms">EMPLOYEE SMS</string>
    <string name="bulksms">BULK SMS</string>
    <string name="grregister">GR REGISTER</string>
    <string name="attendance">ATTENDANCE</string>
    <string name="leftdetail">Left Detail</string>
    <string name="studentviewmarks">VIEW MARKS</string>
    <string name="profilepermission">PROFILE PERMISSION</string>
    <string name="studentabsent">STUDENT ABSENT</string>
    <string name="term1">Term 1</string>
    <string name="term2">Term 2</string>
    <string name="vehiclename">Vehicle Name</string>
    <string name="registrationno">Registration No.</string>
    <string name="passengercapacity">Passenger Capacity</string>
    <string name="vehicledetail">VEHICLE DETAIL</string>
    <string name="Routepick">ROUTE PICK UP POINT DETAIL</string>
    <string name="status">Status</string>
    <string name="vehicleroute">VEHICLE ROUTE</string>
    <string name="feesstructure">FEES  STRUCTURE</string>
    <string name="studentdiscount">STUDENT DISCOUNT</string>
    <string name="discount">Waive Off Type</string>
    <string name="standard">Standard</string>
    <string name="checkno">Cheque No</string>
    <string name="totalamount">Total Amount</string>
    <string name="WaveOffamount">W.Off Amount</string>
    <string name="discountamount">Dis. Amount</string>
    <string name="totalpayamount">Pay Amount</string>
    <string name="checkamount">Amount</string>
    <string name="imprest">IMPREST</string>
    <string name="totalimprest">Total Imprest</string>
    <string name="imprestdeduct">Imprest Deduct</string>
    <string name="remainimprest">Remain Imprest</string>
    <string name="dailyfeescollection">DAILY FEES COLLECTION</string>
    <string name="viewlessonplan">VIEW LESSON PLAN</string>
    <string name="checkpayment">CHEQUE PAYMENT</string>
    <string name="activitylogging">ACTIVITY LOGGING</string>
    <string name="announcment">ANNOUNCMENT</string>
    <string name="viewinquiry">VIEW ENQUIRY</string>
    <string name="holiday">HOLIDAY</string>
    <string name="onlinepayment">ONLINE PAYMENT</string>
    <string name="termdetail">Term Detail</string>
    <string name="date">Date</string>
    <string name="paymentmode">Payment Mode</string>
    <string name="totalfees">Total Fees</string>
    <string name="totalrecfees">Total Rev.Fee</string>
    <string name="pendingfees">Pending Fees</string>
    <string name="timetable">TIME TABLE</string>
    <string name="lecture">Lecuture</string>
    <string name="subject">Subject</string>
    <string name="summary">SUMMARY</string>
    <string name="ptm">PTM</string>
    <string name="classes">Class</string>
    <string name="studentledger">STUDENT LEDGER</string>
    <string name="student_type">Student</string>
    <string name="receipt">Receipt Detail</string>
    <string name="previousbal">Previous Balance</string>
    <string name="tutionfees">Tution Fees</string>
    <string name="admissionfees">Admission Fees</string>
    <string name="cautionfees">Caution Fees</string>
    <string name="transportfees">Transport Fees</string>
    <string name="imprestfees">Imprest Fees</string>
    <string name="latefees">Late Fees</string>
    <string name="discountfees">Discount Fees</string>
    <string name="totalpayfees">Total Payable Fees</string>
    <string name="paidfees">Paid Fees</string>
    <string name="balance">Balance</string>
    <string name="accountsummmary">ACCOUNT SUMMARY</string>
    <string name="collection">Collection\'s</string>
    <string name="amount"><u>Amount</u></string>
    <string name="Studentcoll"><u>Student</u></string>
    <string name="standardwisecoll">Standard Wise Collection</string>
    <string name="exam">EXAM</string>
    <string name="academicyear">Academic Year</string>
    <string name="edit">Edit</string>
    <string name="studentstatus">Student Status</string>
    <string name="fatherfirstname">First Name</string>
    <string name="fatherlastname">Last Name</string>
    <string name="fatherphoneno">Phone no</string>
    <string name="fathermobileno">Mobile no</string>
    <string name="fatheremailaddress">Email Adress</string>
    <string name="fatherqualification">Qualification</string>
    <string name="fatheroccupation">Occupation</string>
    <string name="fatheroragnization">Organization</string>
    <string name="fatherdesignation">Designation</string>
    <string name="motherfirstname">First Name</string>
    <string name="motherlastname">Last Name</string>
    <string name="motherphoneno">Phone no</string>
    <string name="mothermobileno">Mobile no</string>
    <string name="motheremailaddress">Email Adress</string>
    <string name="motherqualification">Qualification</string>
    <string name="motheroccupation">Occupation</string>
    <string name="motheroragnization">Organization</string>
    <string name="motherdesignation">Designation</string>
    <string name="transportkms">Transport KMs</string>
    <string name="test">Test</string>
    <string name="description">Description</string>
    <string name="order">Order</string>
    <string name="inquirycount">Enquiry Count</string>
    <string name="student_name">Megha Shah</string>
    <string name="totalstudent">Total Student</string>
    <string name="activatetoday">Activate Today</string>
    <string name="totalteacher">Total Teacher</string>
    <string name="totaladmin">Total Admin</string>
    <string name="holidaycategory">Holiday Category</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="holidayheading">Holiday Name</string>
    <string name="chapterno">Chapter No</string>
    <string name="chaptername">Chapter Name</string>
    <string name="objective">Objective</string>
    <string name="keypoint">Keypoint</string>
    <string name="assesmentquestion">Assesment Question</string>
    <string name="pdfheader">PDF</string>
</resources>