<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="1dp"
            android:visibility="visible"
            android:background="@drawable/shadow_box">

            <TextView
                android:id="@+id/index_txt"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_31sdp"
                android:paddingLeft="@dimen/_2sdp"
                android:paddingTop="@dimen/_2sdp"
                android:text="@string/index"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp" />

            <TextView
                android:id="@+id/studentname_txt"
                android:layout_width="@dimen/_75sdp"
                android:layout_height="@dimen/_31sdp"
                android:paddingLeft="@dimen/_2sdp"
                android:paddingTop="@dimen/_2sdp"
                android:text="@string/searchstudent"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp" />

            <TextView
                android:id="@+id/Standard_txt"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_31sdp"
                android:paddingLeft="@dimen/_2sdp"
                android:paddingTop="@dimen/_2sdp"
                android:text="@string/grade"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp" />

            <TextView
                android:id="@+id/gender_txt"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_31sdp"
                android:paddingLeft="@dimen/_2sdp"
                android:paddingTop="@dimen/_2sdp"
                android:text="@string/gender"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp" />

            <TextView
                android:id="@+id/status_txt"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_31sdp"
                android:paddingLeft="@dimen/_2sdp"
                android:paddingTop="@dimen/_2sdp"
                android:text="@string/status"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp" />

            <TextView
                android:id="@+id/view_txt"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_31sdp"
                android:paddingLeft="@dimen/_2sdp"
                android:paddingTop="@dimen/_2sdp"
                android:text="@string/view"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp" />
        </LinearLayout>
    </LinearLayout>

</layout>