<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_blue"
        android:orientation="horizontal"
        android:paddingBottom="1dp"

        android:visibility="visible">

        <TextView
            android:id="@+id/index_txt"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_31sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:paddingTop="@dimen/_7sdp"
            android:text="@string/index"
            android:textAlignment="center"
            android:textColor="@color/app_bg"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/academicyear_txt"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_31sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:paddingTop="@dimen/_7sdp"
            android:text="@string/academicyear"
            android:textAlignment="center"
            android:textColor="@color/app_bg"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/termdetail_txt"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_31sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:paddingTop="@dimen/_7sdp"
            android:text="@string/termdetail"
            android:textAlignment="center"
            android:textColor="@color/app_bg"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/grade_txt"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_31sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:paddingTop="@dimen/_7sdp"
            android:text="@string/grade"
            android:textAlignment="center"
            android:textColor="@color/app_bg"
            android:textSize="@dimen/_11sdp"
            android:layout_marginBottom="@dimen/_5sdp"/>

        <TextView
            android:id="@+id/resultstatus_txt"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_31sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:paddingTop="@dimen/_7sdp"
            android:text="@string/resultstatus"
            android:textAlignment="center"
            android:textColor="@color/app_bg"
            android:textSize="@dimen/_11sdp"
            android:layout_marginBottom="@dimen/_5sdp"/>

        <TextView
            android:id="@+id/edit_txt"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_31sdp"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingTop="@dimen/_7sdp"
            android:text="@string/edit"
            android:textAlignment="textStart"
            android:textColor="@color/app_bg"
            android:textSize="@dimen/_11sdp"
            android:layout_marginBottom="@dimen/_5sdp"/>
    </LinearLayout>
</LinearLayout>