<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:background="@drawable/divider"
        android:visibility="visible">

        <TextView
            android:id="@+id/parentsname_txt"
            android:layout_width="@dimen/_77sdp"
            android:layout_height="@dimen/_34sdp"
            android:text="@string/searchparents"
            android:paddingTop="@dimen/_7sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp" />

        <TextView
            android:id="@+id/studentname_txt"
            android:layout_width="@dimen/_77sdp"
            android:layout_height="@dimen/_34sdp"
            android:text="@string/searchstudent"
            android:paddingTop="@dimen/_7sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp" />
        <TextView
            android:id="@+id/grnno_txt"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_34sdp"
            android:text="@string/grno"
            android:paddingTop="@dimen/_7sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp"/>
        <TextView
            android:id="@+id/grade_txt"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_34sdp"
            android:text="@string/grade"
            android:paddingTop="@dimen/_7sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp"/>
        <TextView
            android:id="@+id/view_txt"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_34sdp"
            android:text="@string/view"
            android:paddingTop="@dimen/_7sdp"
            android:textAlignment="textStart"
            android:paddingRight="@dimen/_4sdp"
            android:textStyle="bold"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/absent"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>
</LinearLayout>