<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:orientation="vertical"
        android:background="@drawable/shadow_box">

        <LinearLayout
            android:id="@+id/llHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_33sdp"
            android:orientation="horizontal"
            android:paddingBottom="1dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/index_txt"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_33sdp"
                android:text="@string/index"
                android:paddingTop="@dimen/_5sdp"
                android:textAlignment="center"
                android:paddingLeft="@dimen/_2sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/studentname_txt"
                android:layout_width="@dimen/_85sdp"
                android:layout_height="@dimen/_33sdp"
                android:text="@string/searchstudent"
                android:paddingTop="@dimen/_5sdp"
                android:textAlignment="textStart"
                android:paddingLeft="@dimen/_2sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"/>
            <TextView
                android:id="@+id/grnno_txt"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_33sdp"
                android:text="@string/grno"
                android:paddingTop="@dimen/_5sdp"
                android:textAlignment="center"
                android:paddingLeft="@dimen/_2sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"/>
            <TextView
                android:id="@+id/section_txt"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_33sdp"
                android:text="@string/section"
                android:paddingTop="@dimen/_5sdp"
                android:textAlignment="center"
                android:paddingLeft="@dimen/_2sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />
            <TextView
                android:id="@+id/view_txt"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_33sdp"
                android:text="@string/view"
                android:paddingTop="@dimen/_5sdp"
                android:textAlignment="textStart"
                android:paddingLeft="@dimen/_2sdp"
                android:textColor="@color/absent"
                android:textSize="@dimen/_10sdp"/>
        </LinearLayout>
    </LinearLayout>
</layout>