<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/index_txt"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/index"
            android:paddingTop="@dimen/_4sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/academicyear_txt"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/academicyear"
            android:paddingTop="@dimen/_4sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
        <TextView
            android:id="@+id/termdetail_txt"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/termdetail"
            android:paddingTop="@dimen/_4sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
        <TextView
            android:id="@+id/grade_txt"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/grade"
            android:paddingTop="@dimen/_4sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
        <TextView
            android:id="@+id/resultstatus_txt"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/resultstatus"
            android:paddingTop="@dimen/_4sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
        <ImageView
            android:id="@+id/edit_img"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="left"
            android:padding="@dimen/_3sdp"
            android:textSize="@dimen/_9sdp"
            android:src="@drawable/edit_pen"/>
    </LinearLayout>
</LinearLayout>