<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/index_txt"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_31sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:paddingTop="@dimen/_7sdp"
            android:text="@string/index"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/firstname_txt"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_31sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:paddingTop="@dimen/_7sdp"
            android:text="@string/firstname"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/lastname_txt"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_31sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:paddingTop="@dimen/_7sdp"
            android:text="@string/lastname"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/grnno_txt"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_31sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:paddingTop="@dimen/_7sdp"
            android:text="@string/grno"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/grade_txt"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_31sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:paddingTop="@dimen/_7sdp"
            android:text="@string/grade"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />

        <TextView
            android:id="@+id/view_txt"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_31sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:paddingTop="@dimen/_7sdp"
            android:text="View"
            android:textAlignment="textStart"
            android:textColor="@color/absent"
            android:textSize="@dimen/_11sdp" />
    </LinearLayout>
</LinearLayout>