<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/divider"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:weightSum="4"
        android:visibility="visible">

        <TextView
            android:id="@+id/index_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_33sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:paddingTop="@dimen/_7sdp"
            android:text="@string/index"
            android:layout_weight=".6"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/grade_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_33sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:paddingTop="@dimen/_7sdp"
            android:layout_weight="1"
            android:text="@string/grade"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
        <TextView
            android:id="@+id/classteachername_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_33sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:paddingTop="@dimen/_7sdp"
            android:text="@string/teacher"
            android:layout_weight="1.4"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/section_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_33sdp"
            android:paddingLeft="@dimen/_2sdp"
            android:paddingTop="@dimen/_7sdp"
            android:layout_weight="1"
            android:text="@string/section"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

    </LinearLayout>
</LinearLayout>