<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:visibility="visible"
        android:weightSum="4"
        android:background="@drawable/box_blue">

        <TextView
            android:id="@+id/index_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/index"
            android:layout_weight=".6"
            android:paddingTop="@dimen/_7sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/app_bg"
            android:textSize="@dimen/_11sdp" />
        <TextView
            android:id="@+id/grade_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/grade"
            android:layout_weight="1"
            android:paddingTop="@dimen/_7sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/app_bg"
            android:textSize="@dimen/_11sdp" />
        <TextView
            android:id="@+id/classteachername_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/classTeacher"
            android:layout_weight="1.4"
            android:paddingTop="@dimen/_7sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/app_bg"
            android:textSize="@dimen/_11sdp" />
        <TextView
            android:id="@+id/section_txt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_31sdp"
            android:text="@string/section"
            android:layout_weight="1"
            android:paddingTop="@dimen/_7sdp"
            android:textAlignment="center"
            android:paddingLeft="@dimen/_2sdp"
            android:textColor="@color/app_bg"
            android:textSize="@dimen/_11sdp" />


    </LinearLayout>
</LinearLayout>